charts/authelia/~develop/validation/compiled/full/authelia/templates/service.yaml
---
# Source: authelia/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: authelia
    helm.sh/chart: authelia-0.0.0
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8888
      targetPort: web
      nodePort: null
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    podLabels: enabled
