charts/authelia/~develop/validation/compiled/full/authelia/templates/ingress.yaml
---
# Source: authelia/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: authelia
    helm.sh/chart: authelia-0.0.0
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  ingressClassName: "nginx"
  rules:
    - host: authelia.example.com
      http:
        paths:
          - path: /ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: authelia
                port:
                  number: 8888
