charts/authelia/~develop/validation/compiled/full/authelia/templates/neworkpolicy.yaml
---
# Source: authelia/templates/neworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authelia
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: authelia
    helm.sh/chart: authelia-0.0.0
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  ingress:
    - ports:
        - port: 5006
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: authelia
              app.kubernetes.io/instance: authelia
              podLabels: enabled
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
  egress: 
    - ports:
      - port: 8080
        protocol: TCP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
      app.kubernetes.io/instance: authelia
      podLabels: enabled
  policyTypes:
  - Ingress
  - Egress
